Syncing _articles/2015-05-19-20150519google-io-extended.md from WordPress at http://blog.zenika-offres.com (Zenika Blog) - wpghs

--- a/_articles/2015-05-19-20150519google-io-extended.md
+++ b/_articles/2015-05-19-20150519google-io-extended.md
@@ -6,14 +6,15 @@ post_date: 2015-05-19 15:05:00
 post_excerpt: |
   <p><img src="/public/Al/Event/Google_IO/google_io.png" alt="Google IO Extended" style="display:block; margin:0 auto;" title="Google IO Extended" /> Les 28 et 29 mai aura lieu à San Francisco, le <strong>Google I/O 2015</strong>, la grande messe annuelle de Google. Si vous n'avez pas la possibilité d'être sur place (malheureusement vous n'êtes pas les seuls), ne vous inquiétez pas, il sera possible d'assister à cet événement majeur pour les développeurs grâce aux différents <strong>Google Developer Groups</strong> que nous avons en France.</p>
 layout: post
-permalink: http://blog.zenika-offres.com/?p=55
+permalink: >
+  http://blog.zenika-offres.com/index.php/post/2015/05/19/20150519google-io-extended/
 published: true
 slide_template:
   - default
 ---
 Les 28 et 29 mai aura lieu à San Francisco, le <strong>Google I/O 2015</strong>, la grande messe annuelle de Google. Si vous n'avez pas la possibilité d'être sur place (malheureusement vous n'êtes pas les seuls), ne vous inquiétez pas, il sera possible d'assister à cet événement majeur pour les développeurs grâce aux différents <strong>Google Developer Groups</strong> que nous avons en France.
 
-<!--more-->
+
 
 En effet, en partenariat avec Zenika, des Google I/O Extended seront organisés <strong>à Nantes</strong> et <strong>à Lille</strong> le 28 mai. Après avoir regardé la Keynote en direct (retransmise via YouTube à partir de 18h), un temps d'échange sera consacré aux nouveautés annoncées. Des démos ou des mini-présentations seront envisageables (notamment à Lille) et les pizzas seront offertes à Nantes.
 <h4>Informations complémentaires :</h4>
